pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-259-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/259-list_items.md
---
         1. [3mone[0m

            [3mtwo[0m
